[gd_scene load_steps=22 format=1]

[ext_resource path="res://scripts/player_old.gd" type="Script" id=1]
[ext_resource path="res://assets/player.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 3, 1 )

[sub_resource type="Animation" id=2]

length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/body:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotate/body/rotate_head/head:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -6 ), Vector2( 0, -7 ), Vector2( 0, -6 ), Vector2( 0, -5 ) ]
}

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/body:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotate/body/rotate_head/head:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ) ]
}

[sub_resource type="Animation" id=4]

length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/body/rotate_head/head:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 1, -6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotate/body:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=5]

length = 0.15
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/body/rotate_head/head:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( -1, -6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotate/body:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.05, 0.1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0.1 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_body_animation_finished"
} ]
}

[sub_resource type="Animation" id=6]

length = 0.15
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/body/rotate_head/head:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( -1, -6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotate/body:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.05, 0.1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 44 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0.1 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_body_animation_finished"
} ]
}

[sub_resource type="Animation" id=7]

length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/body/rotate_head/head:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 1, -6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotate/body:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 40, 41 ]
}

[sub_resource type="Animation" id=8]

resource/name = "sword_down_idle"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/body/rotate_head/head:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 1, -6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotate/body:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 40 ]
}

[sub_resource type="Animation" id=9]

length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/body/rotate_head/head:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 1, -6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotate/body:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 48, 49 ]
}

[sub_resource type="Animation" id=10]

resource/name = "sword_up_idle"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/body/rotate_head/head:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 1, -6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotate/body:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 48 ]
}

[sub_resource type="Animation" id=11]

length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/body:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotate/body/rotate_head/head:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ) ]
}

[sub_resource type="Animation" id=12]

resource/name = "idle"
length = 1.0
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=13]

length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/legs:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotate/legs:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("rotate/body:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -6 ), Vector2( 0, -7 ), Vector2( 0, -8 ), Vector2( 0, -6 ), Vector2( 0, -7 ), Vector2( 0, -8 ), Vector2( 0, -6 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0.2 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "_running_dust"
} ]
}

[sub_resource type="Animation" id=14]

length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/legs:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotate/body:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("rotate/legs:frame")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=15]

length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/legs:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotate/legs:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 32 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("rotate/body:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("rotate/body/rotate_head/head:transform/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("rotate/body/rotate_head:transform/scale")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("rotate/legs:visibility/visible")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("rotate/body:visibility/visible")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("rotate/fx:visibility/visible")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0, 0.8 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("rotate/fx:frame")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 78, 79, 80, 81, 82, 83, 84, 85 ]
}

[sub_resource type="Animation" id=16]

length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/legs:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotate/legs:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 32 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("rotate/body:frame")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("rotate/body:transform/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("rotate/body/rotate_head/head:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("rotate/body/rotate_head:transform/scale")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("rotate/legs:visibility/visible")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("rotate/body:visibility/visible")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("rotate/fx:visibility/visible")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("rotate/fx:frame")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 85, 84, 83, 82, 81, 80, 79, 78 ]
}

[sub_resource type="ConvexPolygonShape2D" id=17]

custom_solver_bias = 0.0
points = Vector2Array( 15, 1, 2, -10, -7, -18, 12, -18, 24, -12, 24, -3 )

[sub_resource type="ConvexPolygonShape2D" id=18]

custom_solver_bias = 0.0
points = Vector2Array( 0, 3, -14, 0, 2, -10, 15, 1 )

[sub_resource type="RectangleShape2D" id=19]

custom_solver_bias = 0.0
extents = Vector2( 3, 4 )

[node name="player" type="KinematicBody2D" groups=[
"player",
]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 5
collision/mask = 5
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="anim_body" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle = SubResource( 2 )
anims/none = SubResource( 3 )
anims/run = SubResource( 4 )
anims/slice_down = SubResource( 5 )
anims/slice_up = SubResource( 6 )
anims/sword_down = SubResource( 7 )
anims/sword_down_idle = SubResource( 8 )
anims/sword_up = SubResource( 9 )
anims/sword_up_idle = SubResource( 10 )
anims/walk = SubResource( 11 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="anim_legs" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle = SubResource( 12 )
anims/run = SubResource( 13 )
anims/walk = SubResource( 14 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="anim_fx" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/arrive = SubResource( 15 )
anims/leave = SubResource( 16 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="rotate" type="Node2D" parent="."]

__meta__ = {
"_edit_lock_": true
}

[node name="legs" type="Sprite" parent="rotate"]

transform/pos = Vector2( 0, -6 )
texture = ExtResource( 2 )
vframes = 12
hframes = 8
frame = 34
__meta__ = {
"_edit_lock_": true
}

[node name="body" type="Sprite" parent="rotate"]

transform/pos = Vector2( 0, -8 )
texture = ExtResource( 2 )
vframes = 12
hframes = 8
__meta__ = {
"_edit_lock_": true
}

[node name="rotate_head" type="Node2D" parent="rotate/body"]

transform/pos = Vector2( 0, 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="head" type="Sprite" parent="rotate/body/rotate_head"]

transform/pos = Vector2( 0, -6 )
texture = ExtResource( 2 )
vframes = 12
hframes = 8
frame = 4
__meta__ = {
"_edit_lock_": true
}

[node name="fx" type="Sprite" parent="rotate"]

visibility/visible = false
transform/pos = Vector2( 0, -6 )
texture = ExtResource( 2 )
vframes = 12
hframes = 8
frame = 85

[node name="hitbox" type="Area2D" parent="rotate"]

visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 17 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 18 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 2
collision/mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="rotate/hitbox"]

build_mode = 0
polygon = Vector2Array( -7, -18, 12, -18, 24, -12, 24, -3, 15, 1, 0, 3, -14, 0, 2, -10 )
shape_range = Vector2( 0, 1 )
trigger = false

[node name="collision" type="CollisionShape2D" parent="."]

visibility/visible = false
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="damagebox" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 19 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -3 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="damagebox"]

transform/pos = Vector2( 0, -3 )
shape = SubResource( 19 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[connection signal="area_enter" from="rotate/hitbox" to="." method="_on_hitbox_area_enter"]

[connection signal="area_exit" from="rotate/hitbox" to="." method="_on_hitbox_area_exit"]


